# autodiff-proto

./: .gitignore  LICENSE  README.md  main.cc  main.py  pyproject.toml
src/: typings.py
src/api/: __init__.py
src/functions/: math.py  stats.py
src/mas/libs/masmod/modeling/: __version__.py  typings.py
src/mas/libs/masmod/modeling/api/: __init__.py
src/mas/libs/masmod/modeling/covariate/: naming.py  spec.py
src/mas/libs/masmod/modeling/covariate/syntax/: init.py  pred.py  transformer.py
src/mas/libs/masmod/modeling/functions/: math.py  stats.py
src/mas/libs/masmod/modeling/module/closed_form_solutions/: __init__.py  _args.py  ev_one_cmt.py
src/mas/libs/masmod/modeling/module/defs/: closed_form.py  module.py  ode.py
src/mas/libs/masmod/modeling/module/descriptor/: cc.py  common.py  descriptor.py  distillation.py  interpreter.py
src/mas/libs/masmod/modeling/symbols/: _args.py  _block.py  _closed_form.py  _cmt.py  _column.py  _ns.py  _omega_eta.py  _sharedvar.py  _sigma_eps.py  _theta.py  _x.py  _y.py  sympy_parser.py  to_cst.py
src/mas/libs/masmod/modeling/syntax/: eval.py  rethrow.py  with_comment.py
src/mas/libs/masmod/modeling/syntax/transformers/: autodiff.py  self_attr.py
src/mas/libs/masmod/modeling/syntax/transformers/inline/: transpiler.py
src/mas/libs/masmod/modeling/syntax/visitor/: latexify.py  no_private.py
src/mas/libs/masmod/modeling/utils/: block_diagonal.py  find_global.py  inspect_hack.py  loggings.py
src/module/closed_form_solutions/: __init__.py  _args.py  ev_one_cmt.py
src/module/defs/: closed_form.py  module.py  ode.py
src/module/descriptor/: cc.py  common.py  descriptor.py  distill.py  distillation.py  interpret.py
src/mtran/: eval.py  inline_func_transpile.py  rethrow.py  super_call_fixer.py  unparse.py
src/mtran/transformers/: inline_func_transpile.py  self_attr.py
src/mtran/transformers/autodiff/: transformer.py
src/symbols/: _args.py  _block.py  _closed_form.py  _cmt.py  _column.py  _ns.py  _ode.py  _omega_eta.py  _sharedvar.py  _sigma_eps.py  _symvar.py  _theta.py  _x.py  _y.py  sympy_parser.py  to_cst.py
src/syntax/: eval.py  rethrow.py  with_comment.py
src/syntax/metadata/: scope_provider.py
src/syntax/transformers/: autodiff.py  inline_func_transpile.py  self_attr.py  staticize.py  super_call_fixer.py
src/syntax/transformers/autodiff/: derivative.py  transformer.py
src/syntax/transformers/inline/: flags.py  transpiler.py
src/syntax/visitor/: latexify.py  no_private.py
src/utils/: find_global.py  loggings.py
tests/covariate/: test_transformer.py
tests/mtran/: test_autodiff.py  test_inline_func_transpile.py  test_self_attr.py  test_super_call_fixer.py
tests/syntax/: test_autodiff.py  test_inline_func_transpile.py  test_latexify.py  test_no_private.py  test_self_attr.py  test_super_call_fixer.py
